--- a/private_dot_config/tmux/tmux.conf
+++ b/private_dot_config/tmux/tmux.conf
@@ -7,6 +7,12 @@ bind-key C-l \
 bind-key C-Tab next-window
 bind-key C-S-Tab previous-window
 
+# Set commands to resizing panes  
+bind -n M-Left resize-pane -L 5
+bind -n M-Right resize-pane -R 5
+bind -n M-Up resize-pane -U 5
+bind -n M-Down resize-pane -D 5
+
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
